// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Billing addDedicatedIps dispatches with correct data for "normal" account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "ip_pool": "abcd",
        "quantity": 1,
      },
      "method": "POST",
      "url": "/account/add-ons/dedicated_ips",
    },
    "type": "ADD_DEDICATED_IPS",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/sending-ips",
    },
    "type": "LIST_SENDING_IPS",
  },
]
`;

exports[`Action Creator: Billing addDedicatedIps dispatches with correct data for aws account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "ip_pool": "abcd",
        "quantity": 1,
      },
      "method": "POST",
      "url": "/account/aws-marketplace/add-ons/dedicated_ips",
    },
    "type": "ADD_DEDICATED_IPS",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/sending-ips",
    },
    "type": "LIST_SENDING_IPS",
  },
]
`;

exports[`Action Creator: Billing collectPayments dispatches a collection action 1`] = `
Object {
  "meta": Object {
    "method": "POST",
    "url": "/account/billing/collect",
  },
  "type": "COLLECT_PAYMENTS",
}
`;

exports[`Action Creator: Billing should dispatch a chained billing create action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "test-cors-data",
      },
      "method": "POST",
      "params": Object {
        "context": "create-account",
      },
      "url": "/account/cors-data",
    },
    "type": "CORS_CREATE_ACCOUNT",
  },
  Object {
    "meta": Object {
      "data": Object {
        "billToContact": Object {
          "workEmail": "sparkpost-user-email@example.com",
        },
        "creditCard": Object {},
        "subscription": Object {},
      },
      "headers": Object {
        "signature": undefined,
        "token": undefined,
      },
      "method": "POST",
      "url": "/accounts",
    },
    "type": "ZUORA_CREATE",
  },
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/account/subscription/check",
    },
    "type": "SYNC_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
]
`;

exports[`Action Creator: Billing should dispatch a chained billing update action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {},
      "method": "POST",
      "params": Object {
        "context": "update-billing",
      },
      "url": "/account/cors-data",
    },
    "type": "CORS_UPDATE_BILLING",
  },
  Object {
    "meta": Object {
      "data": Object {
        "accountKey": Object {
          "some": "test-billing-data",
        },
      },
      "headers": Object {
        "signature": undefined,
        "token": undefined,
      },
      "method": "POST",
      "url": "/payment-methods/credit-cards",
    },
    "type": "ZUORA_UPDATE_CC",
  },
  [Function],
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-plan",
      },
      "method": "PUT",
      "url": "/account/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/account/subscription/check",
    },
    "type": "SYNC_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/account/billing/collect",
    },
    "type": "COLLECT_PAYMENTS",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
]
`;

exports[`Action Creator: Billing should dispatch a cors action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "cors-data",
      },
      "method": "POST",
      "params": Object {
        "context": "some-context",
      },
      "url": "/account/cors-data",
    },
    "type": "CORS_SOME_CONTEXT",
  },
]
`;

exports[`Action Creator: Billing should dispatch a create zuora account action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "test-zuora-data",
      },
      "headers": Object {
        "signature": "some-test-signature",
        "token": "SOME$%TEST#*TOKEN",
      },
      "method": "POST",
      "url": "/accounts",
    },
    "type": "ZUORA_CREATE",
  },
]
`;

exports[`Action Creator: Billing should dispatch a subscription sync action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/account/subscription/check",
    },
    "type": "SYNC_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing should dispatch an update credit card action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "credit-card-data",
      },
      "headers": Object {
        "signature": "some-test-signature",
        "token": "SOME$%TEST#*TOKEN",
      },
      "method": "POST",
      "url": "/payment-methods/credit-cards",
    },
    "type": "ZUORA_UPDATE_CC",
  },
]
`;

exports[`Action Creator: Billing should dispatch an update subscription action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": undefined,
      },
      "method": "PUT",
      "url": "/account/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
]
`;

exports[`Action Creator: Billing should update instead of create if account is AWS 1`] = `
Array [
  [Function],
  Object {
    "meta": Object {
      "data": Object {
        "code": "newplan1",
      },
      "method": "PUT",
      "url": "/account/aws-marketplace/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing updateSubscription dispatches un update subscription action for aws marketplace account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-code",
      },
      "method": "PUT",
      "url": "/account/aws-marketplace/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
]
`;

exports[`Action Creator: Billing updateSubscription should dispatch an update subscription action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-code",
      },
      "method": "PUT",
      "url": "/account/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "include": "usage,billing",
      },
      "url": "/account",
    },
    "type": "FETCH_ACCOUNT",
  },
]
`;
